Homepage and podcast -> corrected behaviour on small screens and mobile

--- a/_scss/_navbar.scss
+++ b/_scss/_navbar.scss
@@ -31,3 +31,18 @@ nav {
     }
   }
 }
+
+@include small-screen {
+  
+  nav {
+    ul {
+      text-align: center;
+    }
+  
+    .logo {
+      margin: 12px 0 10px 0;
+      position: relative;
+      display: block;
+    }
+  }
+}
